# PayCards_Source

./: CMakeLists.txt  RecognitionCoreDelegate.cpp  RecognitionCoreDelegate.h  TorchDelegate.cpp  TorchDelegate.h  main.cpp
PayCardsRecognizer/CrossPlatform/CV/: canny.cpp  canny.h  hough.h  warp.cpp  warp.h
PayCardsRecognizer/CrossPlatform/Recognizer/: DateRecognizer.cpp  FrameStorage.cpp  NameRecognizer.cpp  NumberRecognizer.cpp  RecognitionCore.cpp
